Finished structure of HTML document.

--- a/index.html
+++ b/index.html
@@ -78,5 +78,38 @@
 
     </article>
   </section>
+  <section>
+    <h2>Current Students</h2>
+    <p>Thaddeus Stevens is proud to showcase the first class of students to enter the Computer Software Engineering Technology program.</p>
+    <img src="" alt="">
+    <img src="" alt="">
+    <img src="" alt="">
+    <img src="" alt="">
+    <img src="" alt="">
+    <img src="" alt="">
+    <img src="" alt="">
+    <img src="" alt="">
+    <img src="" alt="">
+    <img src="" alt="">
+    <img src="" alt="">
+    <img src="" alt="">
+  </section>
+  <footer>
+    <nav>
+      <ul>
+        <li>
+          <a href="/about-us">About Thaddeus Stevens</a>
+        </li>
+        <li>
+          <a href="/apply">Apply for 2018</a>
+        </li>
+        <li>
+          <a href="/contact">Contact</a>
+        </li>
+      </ul>
+    </nav>
+    <p>&copy; Copyright 2017, Thaddeus Stevens College of Technology</p>
+    <p>All Rights Reserved</p>
+  </footer>
 </body>
 </html>
