Added student images.

--- a/index.html
+++ b/index.html
@@ -81,21 +81,28 @@
 
     </article>
   </section>
-  <section>
-    <h2>Current Students</h2>
-    <p>Thaddeus Stevens is proud to showcase the first class of students to enter the Computer Software Engineering Technology program.</p>
-    <img src="" alt="">
-    <img src="" alt="">
-    <img src="" alt="">
-    <img src="" alt="">
-    <img src="" alt="">
-    <img src="" alt="">
-    <img src="" alt="">
-    <img src="" alt="">
-    <img src="" alt="">
-    <img src="" alt="">
-    <img src="" alt="">
-    <img src="" alt="">
+  <section class="current-students">
+    <div class="the-abs">
+      <h2 class="content-header">Current Students</h2>
+      <p class="mono">Thaddeus Stevens is proud to showcase the first class of students to enter the Computer Software Engineering Technology program.</p>
+      <div class="img-flex">
+        <img src="images/download-1.jpg" alt="">
+        <img src="images/download-2.jpg" alt="">
+        <img src="images/download-3.jpg" alt="">
+        <img src="images/download-4.jpg" alt="">
+        <img src="images/download-5.jpg" alt="">
+        <img src="images/download-6.jpg" alt="">
+        <img src="images/download-7.jpg" alt="">
+        <img src="images/download-8.jpg" alt="">
+        <img src="images/download-9.jpg" alt="">
+        <img src="images/download-10.jpg" alt="">
+        <img src="images/download-11.jpg" alt="">
+        <img src="images/download-12.jpg" alt="">
+        <img src="images/download-13.jpg" alt="">
+        <img src="images/download-14.jpg" alt="">
+        <img src="images/download.jpg" alt="">
+      </div>
+    </div>
   </section>
   <footer>
     <nav>
