--- a/index.html
+++ b/index.html
@@ -105,21 +105,23 @@
     </div>
   </section>
   <footer>
-    <nav>
-      <ul>
-        <li>
-          <a href="/about-us">About Thaddeus Stevens</a>
-        </li>
-        <li>
-          <a href="/apply">Apply for 2018</a>
-        </li>
-        <li>
-          <a href="/contact">Contact</a>
-        </li>
-      </ul>
-    </nav>
-    <p>&copy; Copyright 2017, Thaddeus Stevens College of Technology</p>
-    <p>All Rights Reserved</p>
+    <div class="gradient-bar">
+      <nav>
+        <ul class="nav-links">
+          <li>
+            <a href="/about-us" class="nav-link mono">About Thaddeus Stevens</a>
+          </li>
+          <li>
+            <a href="/apply" class="nav-link mono">Apply for 2018</a>
+          </li>
+          <li>
+            <a href="/contact" class="nav-link mono">Contact</a>
+          </li>
+        </ul>
+      </nav>
+      <p class="footer-copy mono">&copy; Copyright 2017, Thaddeus Stevens College of Technology</p>
+      <p class="footer-copy mono">All Rights Reserved</p>
+    </div>
   </footer>
 </body>
 </html>
